test/implicitDup22.slq

def foo(x:ğ”¹){
	y:=dup(x);
	if x{
		z:=y;
	}else{
		z:=X(y);
	}
	x:=H(x);
	w:=y; /// error
	return (x,w);
}
def main()â‡’foo;
